--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- Open Dialog function will be invoked to open the Modal -->
 <div class="container" style="text-align:center">
   <button mat-raised-button (click)="openDialog()">Open Dialog</button>
 </div>
