--- a/src/app/get-users/get-users.component.css
+++ b/src/app/get-users/get-users.component.css
@@ -1,3 +1,5 @@
+
+/* First column select styles */
 .mat-column-select {
     width: 5px;
     border-right: 1px solid black;
@@ -7,6 +9,7 @@
    
   }
 
+  /* Second column name styles*/
   .mat-column-name {
     width: 150px;
     border-right: 1px solid black;
@@ -14,12 +17,16 @@
     text-align: center;
     height: 5px;
   }
+
+  /* Third column description styles */
   .mat-column-description  {
     width: 350px;
     border-right: 1px solid black;
     padding-right: 5px;
     text-align: center;
   }
+
+  /* Fourth column web reference styles */
   .mat-column-webReference {
     width: 200px;
     border-right: 1px solid black;
@@ -27,35 +34,42 @@
     text-align: center;
   }
 
+  /* Last column styles */
   td.mat-cell:last-of-type,     th.mat-header-cell:last-of-type  {
       padding-right: 0 !important;
   }
 
+  /* First column styles */
   th.mat-header-cell:first-of-type , td.mat-cell:first-of-type{
       padding-left: 5px !important;
   }
 
+  /* Table header cells styles */
   th.mat-header-cell{
       color: black !important;
       background: #cee5f2;
       border-top: 1px solid;
   }
+
+  /* Paginator styling */
   .mat-paginator-container{
       justify-content: flex-start !important;
       padding: 0 !important;
   }
 
+  /* Border styling for all the rows */
   mat-row, mat-header-row, mat-footer-row, th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
     border-bottom-color: black;
 }
 
-
+/* Input element styling */
 .mat-input-element{
     margin-left: 5px !important;
     border: solid 1px black !important;
-    width: 25% !important;
+    width: 40% !important;
 }
   
+/* Media query for responsive page design */
 @media only screen and (min-width: 600px) {
     #mediaWrap {
         flex-wrap: nowrap !important;
