--- a/src/app/get-users/get-users.component.html
+++ b/src/app/get-users/get-users.component.html
@@ -5,11 +5,16 @@
         <div style="background-color: #2b91d9;height: 26px !important;">
 
           <label style="font-size: 15px;color: white;">Alerts</label>
+
+          <!-- Close button as icon which will invoke function closeDialog() and close the modal -->
           <mat-icon (click)="closeDialog()" style="float: right;cursor: pointer;color: white;" aria-hidden="false" aria-label="Example home icon">highlight_off</mat-icon>
         </div>
       </div>
       
+      <!-- Tab groups -->
       <mat-tab-group mat-align-tabs="end" >
+
+        <!-- First Tab of Immunization Alerts -->
         <mat-tab active label="Immunization Alerts">
 
 
@@ -21,17 +26,19 @@
             <h2 mat-dialog-title style="color: #2b91d9;">Immunization Alerts</h2>
           
           
-          
+            <!-- Search with triggering function search() on change of text  -->
             <label>Find</label>
             <input [(ngModel)]='searchText' matInput (ngModelChange)="search()">
+
+            <!-- Delete selected user by triggering function deleteUser() on clicking the button -->
             <button mat-raised-button (click)="deleteUser()"style="float: right; line-height: 24px; background-color: ghostwhite;">Delete</button>
           
           
           
-            
+              <!-- Table of the data provided in the json file -->
               <table style=" margin-top: 5px;" mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
   
-                
+                <!-- Checboxes column -->
                 <ng-container matColumnDef="select">
                   <th mat-header-cell *matHeaderCellDef>
                     <mat-checkbox 
@@ -54,7 +61,7 @@
                   <td mat-cell *matCellDef="let row"> {{row.name}} </td>
                 </ng-container>
               
-                <!-- Desccrition Column -->
+                <!-- Description Column -->
                 <ng-container matColumnDef="description">
                   <th (click)="sortByDesc()" mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
                   <td mat-cell *matCellDef="let row"> {{row.description}} </td>
@@ -75,16 +82,19 @@
             </div>
           
   
-          
+            <!-- Add User Form  -->
             <div style="margin-top: 5px;" class="col-xs-12 col-md-5 col-lg-6 col-sm-4" >
               
-                <label style="margin-right: 50px;" >Name</label>
-                <input required placeholder="Name is required" matInput [(ngModel)]='name' ><br>
-                <label style="margin-right: 16px;" >Description</label>
-                <input required placeholder="Description is required"  matInput [(ngModel)]='description' ><br>
-                <label style="margin-right: 35px;" >Web Ref</label>
-                <input required placeholder="Web Reference is required" [(ngModel)]='webRef' matInput ><br>
-                <button mat-raised-button (click)="addUser()" style="float: right; line-height: 24px; background-color: ghostwhite;">Add</button>
+                <label style="margin-right: 50px;margin-bottom: 40px;" >Name</label>
+                <input style="margin-bottom: 40px;" required  matInput [(ngModel)]='name' ><br>
+
+                <label style="margin-right: 16px;margin-bottom: 40px;" >Description</label>
+                <input style="margin-bottom: 40px;" required  matInput [(ngModel)]='description' ><br>
+
+                <label style="margin-right: 35px;margin-bottom: 40px;" >Web Ref</label>
+                <input style="margin-bottom: 40px;" required  matInput [(ngModel)]='webRef'  ><br>
+
+                <button style="margin-right: 400px;"  mat-raised-button (click)="addUser()" style="margin-left: 45%; line-height: 24px; background-color: ghostwhite;">Add</button>
               
             </div>
           
@@ -92,7 +102,8 @@
   
         
         </div>
-  
+        
+        <!-- Pagination and OK and Cancel button -->
         <div class="row">
   
           <div class="col-xs-12 col-md-7 col-lg-6 col-sm-8">
